<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wordle</string>
    <string name="wordle_header">WORDLE</string>
    <string name="delete">delete</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="b">B</string>
    <string name="v">V</string>
    <string name="c">C</string>
    <string name="x">X</string>
    <string name="z">Z</string>
    <string name="enter">ENTER</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="i">I</string>
    <string name="u">U</string>
    <string name="y">Y</string>
    <string name="t">T</string>
    <string name="r">R</string>
    <string name="e">E</string>
    <string name="w">W</string>
    <string name="q">Q</string>
    <string name="new_game">NEW GAME</string>
    <string name="resume">RESUME</string>
    <string name="congratulations">CONGRATULATIONS\nYOU WON!!</string>
    <string name="game_over">GAME OVER</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="quit_game">QUIT GAME</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="start_new_game">START NEW GAME</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="share">SHARE</string>
    <string name="game_summary">I won on my %1$s try!! \n</string>
    <string-array name="ordinals">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
    </string-array>
    <string name="green_square">🟩</string>
    <string name="yellow_square">🟨</string>
    <string name="black_square">⬛</string>
    <string name="the_answer_was">The answer was:</string>

    <!-- sharedPreferences -->
    <string name="com.example.wordle.GAME_STATE_FILE_KEY">gameState</string>
    <string name="com.example.wordle.STATS_FILE_KEY">stats</string>
    <string name="statistics">STATISTICS</string>
    <string name="view_stats">VIEW STATS</string>
    <string name="close">CLOSE</string>
    <string name="played">Played</string>
    <string name="win_percent">Win %</string>
    <string name="current_streak">Current\nStreak</string>
    <string name="max_streak">Max\nStreak</string>
    <string name="this_will_count_as_a_loss">This will count as a loss</string>
    <string name="guess_distribution">GUESS DISTRIBUTION</string>
    <string name="negative_one">-1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="bar_graph_one">bar graph one</string>
    <string name="bar_graph_two">bar graph two</string>
    <string name="bar_graph_three">bar graph three</string>
    <string name="bar_graph_four">bar graph four</string>
    <string name="bar_graph_five">bar graph five</string>
    <string name="bar_graph_six">bar graph six</string>
    <string name="help_button">help button</string>
    <string name="statistics_button">statistics button</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="instructions">Guess the WORDLE in six tries.\n\nEach guess must be a valid five-letter word. Hit the enter button to submit.\n\nAfter each guess, the color of the tiles will change to show how close your guess was to the word.</string>
    <string name="examples">Examples</string>
    <string name="example_1">The letter W is in the word and in the correct spot.</string>
    <string name="example_2">The letter I is in the word but in the wrong spot.</string>
    <string name="example_3">The letter U is not in the word in any spot.</string>
    <string name="settings">SETTINGS</string>
    <string name="hard_mode">HARD MODE</string>
    <string name="hard_mode_description">Any revealed hints must be used in subsequent guesses</string>
    <string name="reset_statistics">RESET STATISTICS</string>
    <string name="theme">THEME</string>
    <string name="system_default">SYSTEM DEFAULT</string>
    <string name="dark">DARK</string>
    <string name="light">LIGHT</string>
    <string name="reset_warning">This will permanently delete all of your statistics and in progress game!</string>
    <string name="missed_yellow_hint">Guess must contain %1$s</string>
    <string name="missed_green_hint">The %1$s letter must be %2$s</string>
    <string name="notifications">Notifications</string>
    <string name="what_does_that_mean">What does %1$s mean?</string>
    <string name="queryUrl">https://www.google.com/search?q=%1$s+definition</string>
</resources>