<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dialogs.WinnerDialog">

    <data>

        <variable
            name="viewModel"
            type="com.example.wordle.model.GameViewModel" />

        <variable
            name="winnerDialog"
            type="com.example.wordle.dialogs.WinnerDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/congratulations_textView"
            style="@style/Widget.Wordle.Dialog.Header"
            android:text="@string/congratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_again_button"
            style="@style/Widget.Wordle.Dialog.Button"
            android:text="@string/play_again"
            android:onClick="@{() -> winnerDialog.playAgain()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congratulations_textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quit_game_button"
            style="@style/Widget.Wordle.Dialog.Button"
            android:text="@string/quit_game"
            android:onClick="@{() -> winnerDialog.quitGame()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_again_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            style="@style/Widget.Wordle.Dialog.Button"
            android:text="@string/share"
            android:onClick="@{() -> winnerDialog.share()}"
            app:icon="@drawable/share_icon"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quit_game_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>