<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dialogs.ResetDialog">

    <data>

        <variable
            name="viewModel"
            type="com.example.wordle.ui.model.SettingsViewModel" />

        <variable
            name="resetDialog"
            type="com.example.wordle.ui.dialogs.ResetDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/are_you_sure_textView"
            style="@style/Widget.Wordle.Dialog.Header"
            android:text="@string/are_you_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reset_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/reset_warning"
            app:layout_constraintTop_toBottomOf="@id/are_you_sure_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_stats_button"
            android:layout_width="wrap_content"
            style="@style/Widget.Wordle.Dialog.Button"
            android:onClick="@{() -> resetDialog.reset()}"
            android:text="@string/reset_statistics"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Wordle.Dialog.Button"
            android:text="@string/cancel"
            android:onClick="@{() -> resetDialog.cancel()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_stats_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>